add sonar